--- a/Project8_Group1_MLDL.ipynb
+++ b/Project8_Group1_MLDL.ipynb
@@ -322,9 +322,14 @@
         "  def get_nclasses(dataset):\n",
         "    return 100 if dataset == 'cifar100' else 10 if dataset == 'cifar10' else 120\n",
         "\n",
+        "# We use the NAS-Bench-201 function because NATS-Bench is an extension of NAS-Bench-201\n"
+        "# To use Zero-Cost-Proxies functions as synflow, we need the entire model of the network;\n"
+        "# that's why we use the class model of NAS-Bench-201\n"
         "  net = nasbench2.get_model_from_arch_str(arch_str.tostr(), get_nclasses(dataset))\n",
         "  measures = predictive.find_measures(net, train_loader, (dataload, dataload_info, get_nclasses(dataset)), device, measure_names=['synflow'])\n",
-        "  return math.log1p(measures['synflow']), time.time() - start ###\n",
+        "# We decide to not use only synflow as a result, but normalizing it thanks to the natural logarithm of\n",
+        "# 1 + (measures['synflow'])\n"
+        "  return math.log1p(measures['synflow']), time.time() - start\n",
         "\n"
       ],
       "metadata": {
